# jaxglitches

./: .gitignore  README.md  epochs_1.h5  glitch_and_gb.ipynb  glitch_catalog.npz  lisa.ipynb  main.py  noise.py  orbits_comparison.ipynb  pyproject.toml  raw_and_tdi_tests.ipynb  test_rates_priors.ipynb  waveform_fft_tests.ipynb
src/jaxglitches/: __init__.py  catalog_generator.py  constants.py  data.py  likelihood.py  orbits.py  priors.py  waveform.py
src/jaxglitches/lpf_data/: 2021-09-17-effective_glitch_parameters_cold.txt  2021-09-17-effective_glitch_parameters_ordinary.txt  2021-09-17-intervals_ordinary.txt
tests/: conftest.py  test_catalog_generator.py  test_data.py  test_gradients.py  test_likelihood.py  test_noise.py  test_orbits.py  test_priors.py  test_waveform.py
