[project]
name = "jaxglitches"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10.0",
    "lisaglitch>=2.0.0",
    "lisaorbits>=3.0.0",
    "numpy>=1.24",
    "wdm-transform[jax]>=0.5.0",
]

[project.optional-dependencies]
notebook = [
    "matplotlib",
    "scipy",
    "ipykernel",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
