[project]
name = "jaxglitches"
version = "0.1.0"
description = "JAX-based LISA glitch waveforms, TDI responses (equal and unequal arms), and parameter-estimation utilities"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jax>=0.10.0",
    "lisaglitch>=2.0.0",
    "lisaorbits>=3.0.0",
    "numpy>=1.24",
    "wdm-transform[jax]>=0.5.0",
]

[project.optional-dependencies]
notebook = [
    "matplotlib",
    "scipy",
    "ipykernel",
    "jexplore>=0.0.2",   # affine-invariant ensemble sampler (lisa.ipynb, orbits_comparison.ipynb §8)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# src layout; the bundled LPF catalogue (lpf_data/*.txt) ships with the wheel
packages = ["src/jaxglitches"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
